# rugraph

./: Cargo.toml  README.md
.github/workflows/: rust.yml
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/implementors/core/ops/drop/: trait.Drop.js
doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/rugraph/: all.html  index.html  sidebar-items.js  struct.Graph.html
doc/src/rugraph/: rugraph.rs.html
example/: Cargo.toml
example/src/: main.rs
examples/: example1.rs  example2.rs  example3.rs
src/: digraph.rs  graph.rs  lib.rs  multidigraph.rs  rugraph.rs
