[package]
name = "rugraph"
version = "1.1.1"
edition = "2021"
authors = ["yangosoft"]
description = "Simple undirected, directed and multidirected graph library."
license-file = "LICENSE"
homepage = "https://github.com/yangosoft/rugraph"
repository = "https://github.com/yangosoft/rugraph"
readme = "README.md"
keywords = ["graph", "digraph", "multidirected", "multidigraph", "dot"]




[[example]]
name = "example1"
crate-type = ["bin"]

[[example]]
name = "example2"
crate-type = ["bin"]

[[example]]
name = "example3"
crate-type = ["bin"]

[dependencies]
